--- a/Mybatis/production/02_mybatis_config/dbconfig.properties
+++ b/Mybatis/production/02_mybatis_config/dbconfig.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/mybatis
 jdbc.username=root
-jdbc.password=root
+jdbc.password=123456
 
 orcl.driver=oracle.jdbc.OracleDriver
 orcl.url=jdbc:oracle:thin:@localhost:1521:XE
