--- a/boot&cloud/boot_day03-web-admin/src/main/resources/application.properties
+++ b/boot&cloud/boot_day03-web-admin/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-#Redis·þÎñÆ÷µØÖ·
-spring.redis.host=192.168.200.130
-#redis·þÎñÆ÷¶Ë¿Ú
-spring.redis.port=6379
-#redisÊý¾Ý¿âË÷Òý£¨Ä¬ÈÏÎª0£©
-spring.redis.database=0
-#Á¬½Ó³¬Ê±¼äºÁÃë
-spring.redis.timeout=1800000
-#Á¬½Ó³Ø×î´óÁ¬½ÓÊý£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£©
-spring.redis.lettuce.pool.max-active=20
-#×î´ó×èÈûµÈ´ýÊ±¼ä(¸ºÊý±íÊ¾Ã»ÓÐÏÞÖÆ)
-spring.redis.lettuce.pool.max-wait=1
-#Á¬½Ó³Ø×î´ó¿ÕÏÐÁ¬½Ó
-spring.redis.lettuce.pool.max-idle=5
-#Á¬½Ó³ØÖÐµÄ×îÐ¡¿ÕÏÐÁ¬½Ó
-spring.redis.lettuce.pool.min-idle=0
+##Redisï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö·
+#spring.redis.host=192.168.200.130
+##redisï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ë¿ï¿½
+#spring.redis.port=6379
+##redisï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¬ï¿½ï¿½Îª0ï¿½ï¿½
+#spring.redis.database=0
+##ï¿½ï¿½ï¿½Ó³ï¿½Ê±ï¿½ï¿½ï¿½ï¿½ï¿½
+#spring.redis.timeout=1800000
+##ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½
+#spring.redis.lettuce.pool.max-active=20
+##ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½Ê±ï¿½ï¿½(ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½)
+#spring.redis.lettuce.pool.max-wait=1
+##ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+#spring.redis.lettuce.pool.max-idle=5
+##ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½Ð¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+#spring.redis.lettuce.pool.min-idle=0
 
