--- a/boot&cloud/boot_day03-web-admin/src/main/resources/application.yml
+++ b/boot&cloud/boot_day03-web-admin/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/jdbc_data
     username: root
-    password: root
+    password: 123456
     driver-class-name: com.mysql.jdbc.Driver
 #    type: com.zaxxer.hikari.HikariDataSource
   jdbc:
@@ -16,14 +16,18 @@ spring:
   boot:
     admin:
       client:
-        url: http://localhost:8888
+        url: http://localhost:8889
   servlet:
     multipart:
       enabled: true
       max-request-size: 100MB
       max-file-size: 20MB
       file-size-threshold: 20MB
-
+logging:
+  level:
+    com.boot.springboot_test.mapper: debug
+    root: info
+    org.springframework: warn
 
 
 #配置mybatis规则
@@ -33,8 +37,6 @@ mybatis:
   configuration:
     #开启驼峰命名
     map-underscore-to-camel-case: true
-server:
-  port: 8080
 
 
 #management 是所有actuator的配置
@@ -64,6 +66,7 @@ info:
   appVersion: 1.0.0
   mavenProjectName: @project.artifactId@
   mavenProjectVersion: @project.version@
-
+server:
+  port: 8081
 
 
