--- a/cloud2022/cloud-consumer-fegin-order80/src/main/resources/application.yml
+++ b/cloud2022/cloud-consumer-fegin-order80/src/main/resources/application.yml
@@ -4,7 +4,7 @@ eureka:
   client:
     register-with-eureka: false
     service-url:
-      defaultZone: http://eureka7001.com:7001/eureka, http://eureka7002.com:7002/eureka
+      defaultZone: http://eureka7001.com:7001/eureka #, http://eureka7002.com:7002/eureka
 ribbon:
 #  指的是建立连接后从服务器读取到可用资源所用时间
   ReadTimeout: 5000
